fix text alignment issue

--- a/themes/sgsc/sass/_archive-gallery.scss
+++ b/themes/sgsc/sass/_archive-gallery.scss
@@ -142,6 +142,12 @@
             &:hover {
               color: $orange;
             }
+            p {
+              font-size: $font_m-h1;
+              @media screen and (min-width: $mobile_width) {
+                font-size: $font_d-h2;
+              }
+            }
           }
         }
       }
