--- a/themes/sgsc/sass/_mixins.scss
+++ b/themes/sgsc/sass/_mixins.scss
@@ -106,6 +106,7 @@
       a {
         text-decoration: none;
         color: $black;
+        display: flex;
         i {
           padding: .4rem;
           color: $black;
